Changelog:
==========

1.80.0 - 2012-??-??

    PMS.conf:
        - ffmpeg has been renamed ffmpeg_video_custom_options and now defaults to null
    Renderers:
        - Document TranscodeVideo and TranscodeAudio profiles
    Engines:
        FFmpeg Video and FFmpeg Web Video:
            - support all three TranscodeVideo profiles: WMV, MPEGTSAC3 and MPEGPSAC3
            - preserve source video quality
        FFmpeg Video:
            - custom FFmpeg options are now read before each transcode rather than only at startup (parity with custom MEncoder options)
            - rescale videos larger than the renderer's max height/width
        FFmpeg Audio: support all TranscodeAudio profiles
    Language updates:
        - Updated Brazilian translation (thanks, Bruno Arueira)
    Misc:
        - fix bug that prevents PMS running multiple profiles concurrently
        - fix NPE for DLNA subtitle requests

1.72.0 - 2012-11-18

    Regressions:
        - Fixed bug that occurred when using ShowDVDTitleDuration
        - Fixed bug that caused embedded subtitles to be displayed when subtitles are disabled
        - Fixed bug in handling of filenames with embedded $ characters
    Engines:
        - Removed option to automatically switch to tsMuxeR (available manually via the #--TRANSCODE--# folder)

1.71.0 - 2012-11-06

    Windows:
        - Updated MEncoder and MPlayer to SB41
        - Updated ffmpeg to 1.0 (Zeranoe Build 2012-10-10)
        - Fixed file permissions bug
    Mac OS X subtitles:
        - Changed audio/subtitle defaults to accept anything
        - Removed fontconfig from MEncoder for improved subs compatibility
    Renderers:
        - Improved Android.conf video support
        - Added support for Samsung SMT-G7400 (UPC Horizon)
        - Fixed bug that prevented Galaxy Nexus pictures displaying
    Language updates:
        - Updated Chinese Traditional translation (thanks, mcc!)
        - Added Turkish icon
    Misc: