@@ -127,9 +127,33 @@ Image = true
 # DLNA SETTINGS
 #
 
-# SeekByTime: Set to true to use the DLNA feature seek by time instead of by
-# range.
-SeekByTime = true
+# SeekByTime: Set to true to use the DLNA feature seek-by-time instead of
+# the default seek-by-byte method.
+#
+# Valid values:
+#
+#     true:
+#
+#         The renderer supports seek-by-time.
+#
+#     false:
+#
+#         The renderer doesn't support seek-by-time, so it should
+#         only use the default seek-by-byte method.
+#
+#     exclusive:
+#
+#         While most renderers that support seek-by-time also support
+#         seek-by-byte, some (e.g. the PS3 [1] and Panasonic TVs [2])
+#         behave unreliably if PMS permits them to use seek-by-byte
+#         when seek-by-time is permitted. This option works around this
+#         by disabling seek-by-byte when permitting seek-by-time.
+#
+# The default is false.
+#
+# [1] Seeking via "Go To" with the PS3 (firmware 4.31) and MEncoder works with "exclusive", but hangs or crashes with "true".
+# [2] http://www.ps3mediaserver.org/forum/viewtopic.php?f=6&t=15841
+SeekByTime = exclusive
 
 # DLNALocalizationRequired: Serve different flavors of localization in the
 # DLNA parameters (PAL/NTSC, NA/EU/JP) to allow every world wide renderer to
@@ -138,13 +162,13 @@ DLNALocalizationRequired = false
 
 # CBRVideoBitrate is useful for renderers without SeekByTime support. It does time2byte conversion to support FF/RW.
 # Only possibility how to predict where we are when seeking is using CBR bitrate instead of VBR used by default
-# Making CBR stream by MEncoder is 3 times slower than using VBR so count with it if you have a slow computer!
+# Creating a CBR stream with MEncoder is 3 times slower than using VBR so bear this in mind if you have a slow computer!
 # Speed can hopefully be optimized a little bit in the future:
 # http://www.ps3mediaserver.org/forum/viewtopic.php?f=14&t=8883&p=53706&hilit=ditlew#p53700
 # http://www.ps3mediaserver.org/forum/viewtopic.php?f=11&t=11284&p=62765&hilit=1835#p62765
 # CBRVideoBitrate=15000
 
-# ByteToTimeseekRewindSeconds is used for finetuning so default is 0 
+# ByteToTimeseekRewindSeconds is used for fine tuning, so the default is 0
 # ByteToTimeseekRewindSeconds=0
 
 #-----------------------------------------------------------------------------
