@@ -21,7 +21,7 @@ UserAgentAdditionalHeaderSearch=(cn="Sony Corporation"; mn="Media Player")
 Video=true
 Audio=true
 Image=true
-SeekByTime=false
+SeekByTime=exclusive
 TranscodeVideo=MPEGTSAC3
 TranscodeAudio=LPCM
 DefaultVBVBufSize=true
